Enable security manager in Servlet container tests (#2883)