@@ -18,39 +18,40 @@
  */
 package co.elastic.apm.servlet;
 
-import co.elastic.apm.servlet.tests.CdiJakartaeeServletContainerTestApp;
 import co.elastic.apm.servlet.tests.JakartaExternalPluginTestApp;
-import co.elastic.apm.servlet.tests.JakartaeeJsfServletContainerTestApp;
 import co.elastic.apm.servlet.tests.JakartaeeServletApiTestApp;
 import co.elastic.apm.servlet.tests.TestApp;
 import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
 
 import java.util.Arrays;
+import java.util.List;
 
 @RunWith(Parameterized.class)
-public class JakartaeeTomcatIT extends AbstractTomcatIT {
+public class JakartaeeTomcatWithSecurityManagerIT extends AbstractTomcatIT {
 
-    public JakartaeeTomcatIT(final String tomcatVersion) {
+    public JakartaeeTomcatWithSecurityManagerIT(final String tomcatVersion) {
         super(tomcatVersion);
     }
 
     @Parameterized.Parameters(name = "Tomcat {0}")
     public static Iterable<Object[]> data() {
         return Arrays.asList(new Object[][]{
-            {"10.0.10-jdk8"},
-            {"10.0.10-jdk11"},
-            {"10.0.10-jdk8-adoptopenjdk-openj9"},
-            {"10.0.10-jdk11-adoptopenjdk-openj9"},
-            {"10.0.10-jdk8-adoptopenjdk-hotspot"}
+            {"10.0.10-jdk11-adoptopenjdk-hotspot"},
+            {"10.1.0-jdk17-temurin"}, // Servlet 6.x
         });
     }
 
     @Override
     protected Iterable<Class<? extends TestApp>> getTestClasses() {
-        return Arrays.asList(JakartaeeServletApiTestApp.class,
-            JakartaeeJsfServletContainerTestApp.class,
-            JakartaExternalPluginTestApp.class,
-            CdiJakartaeeServletContainerTestApp.class);
+        return List.of(
+            JakartaeeServletApiTestApp.class,
+            JakartaExternalPluginTestApp.class
+        );
+    }
+
+    @Override
+    protected boolean isSecurityManagerEnabled() {
+        return true;
     }
 }
